src/objects/Linea_Contrato__c.object
<CustomObject>
    <description>Objeto personalizado utilizado para albergar el conjunto de tareas pertenecientes a un contrato de mantenimiento B2B-B2B2C que tienen la misma periodicidad.</description>
    <fields>
        <fullName>LDC_CAS_Activo__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Nos informa si una línea de contrato está activa</description>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDC_CAS_Seleccion_Auto__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si la línea de contrato correctiva se debe vincular automáticamente a un nuevo servicio.</description>
        <label>Selección Automática</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDC_CAS_Urgente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusivo para Urgencias</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDC_DIV_Importe_Material_incluido__c</fullName>
        <label>Importe Material</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LDC_FOR_Cuenta_Asociada__c</fullName>
        <formula>LDC_LKP_Contrato__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cuenta Asociada</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_FOR_Cuenta_relacionada__c</fullName>
        <formula>LDC_LKP_Contrato__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente B2B/B2B2C</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_FOR_Gremio__c</fullName>
        <formula>TEXT(LDC_LKP_Tipo_Trabajo__r.TDT_SEL_Gremio__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gremio del Tipo de Trabajo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_FOR_RTDevName__c</fullName>
        <description>Nombre API del Tipo de Registro.</description>
        <formula>&apos;Linea_Contrato__c:&apos; + RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType DevName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_FOR_Tipo__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_LKP_Contrato__c</fullName>
        <description>Relación Master Detail entre las líneas de Contrato y el Contrato</description>
        <label>Contrato</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Líneas de Contrato</relationshipLabel>
        <relationshipName>Lineas_Contrato</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LDC_LKP_Tipo_Trabajo__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Campo lookup para relacionar las líneas de contrato con los tipos de trabajo que posteriormente se relacionará con cada Orden de Trabajo</description>
        <label>Tipo de Trabajo</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Líneas de Contrato</relationshipLabel>
        <relationshipName>Lineas_de_Contrato</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LDC_NUM_Horas_de_Mano_de_obra__c</fullName>
        <label>Horas de Mano de Obra</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDC_NUM_Limite_de_servicios__c</fullName>
        <label>Lím. Servicios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDC_NUM_Periodicidad__c</fullName>
        <label>Periodicidad</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDC_NUM_Preaviso_dias__c</fullName>
        <label>Días de preaviso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDC_SEL_Gremio__c</fullName>
        <label>Gremio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Gremios</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LDC_SEL_Unidad_de_periodicidad__c</fullName>
        <label>Unidad de periodicidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Unidad_Periodicidad</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LDC_TXT_Identificador__c</fullName>
        <description>Identificador único de la línea de contrato</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_TXT_Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Línea de Contrato</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LDC_LKP_Tipo_Trabajo__c</columns>
        <columns>LDC_SEL_Gremio__c</columns>
        <columns>LDC_FOR_Cuenta_Asociada__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>L.C-{00000000}</displayFormat>
        <label>Nº de Línea</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Líneas de Contrato</pluralLabel>
    <recordTypes>
        <fullName>LDC_Correctivo</fullName>
        <active>true</active>
        <description>RT utilizado para diferenciar los campos de la línea de Contrato Correctiva de Preventiva</description>
        <label>Correctivo</label>
    </recordTypes>
    <recordTypes>
        <fullName>LDC_Preventivo</fullName>
        <active>true</active>
        <description>RT utilizado para diferenciar los campos de la línea de Contrato Preventivo de la Correctivo</description>
        <label>Preventivo</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(PRIORVALUE(LDC_TXT_Identificador__c ))),ISCHANGED(LDC_TXT_Identificador__c )), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LDC_RDV_GremiosUrgentes</fullName>
        <active>true</active>
        <description>Cuando una línea de contrato tenga el check de urgente marcado, sólo podrá seleccionar los gremios que permiten urgencias</description>
        <errorConditionFormula>(LDC_CAS_Urgente__c  = True) &amp;&amp; (NOT(ISPICKVAL(LDC_SEL_Gremio__c, (&apos;05&apos;)))) &amp;&amp; 
(LDC_CAS_Urgente__c  = True) &amp;&amp; (NOT(ISPICKVAL(LDC_SEL_Gremio__c, (&apos;01&apos;)))) &amp;&amp; 
(LDC_CAS_Urgente__c  = True) &amp;&amp; (NOT(ISPICKVAL(LDC_SEL_Gremio__c, (&apos;06&apos;)))) &amp;&amp; 
(LDC_CAS_Urgente__c  = True) &amp;&amp; (NOT(ISPICKVAL(LDC_SEL_Gremio__c, (&apos;07&apos;)))) &amp;&amp; 
(LDC_CAS_Urgente__c  = True) &amp;&amp; (NOT(ISPICKVAL(LDC_SEL_Gremio__c, (&apos;12&apos;)))) &amp;&amp; 
(LDC_CAS_Urgente__c  = True) &amp;&amp; (NOT(ISPICKVAL(LDC_SEL_Gremio__c, (&apos;&apos;))))</errorConditionFormula>
        <errorMessage>El gremio seleccionado no permite urgencias</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requerimiento_de_identificador</fullName>
        <active>false</active>
        <description>Regla de validación para requerir el campo Identificador</description>
        <errorConditionFormula>OR(ISBLANK(LDC_TXT_Identificador__c),ISNULL( LDC_TXT_Identificador__c))</errorConditionFormula>
        <errorDisplayField>LDC_TXT_Identificador__c</errorDisplayField>
        <errorMessage>El campo Identificador es requerido</errorMessage>
    </validationRules>
</CustomObject>